--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,45 @@
 <!DOCTYPE html>
 <html>
-
   {% include head.html %}
-
   <body>
-
     {% include header.html %}
-
     <div class="page-content">
       <div class="wrapper">
         {{ content }}
+
+
+        <div id="basic">
+          <div class="table">
+            <div class="tr">
+              <div class="td">
+                <div class="digit">
+                  0
+                </div>
+              </div>
+              <div class="td">
+                <div class="digit">
+                  1
+                </div>
+              </div>
+              <div class="td">
+                <div class="digit">
+                  2
+                </div>
+              </div>
+              <div class="td">
+                <div class="digit">
+                  3
+                </div>
+              </div>
+              <div class="td">
+                <div class="digit">
+                  4
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-
-    {% include footer.html %}
-
   </body>
-
 </html>
