--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,38 +7,54 @@
       <div class="wrapper">
         {{ content }}
 
-
         <div id="basic">
           <div class="table">
             <div class="tr">
+
               <div class="td">
-                <div class="digit">
-                  0
+                <div class="aspect-ratio">
+                  <div class="digit">
+                    0
+                  </div>
                 </div>
               </div>
+
               <div class="td">
-                <div class="digit">
-                  1
+                <div class="aspect-ratio">
+                  <div class="digit">
+                    1
+                  </div>
                 </div>
               </div>
+
               <div class="td">
-                <div class="digit">
-                  2
+                <div class="aspect-ratio">
+                  <div class="digit">
+                    2
+                  </div>
                 </div>
               </div>
+
               <div class="td">
-                <div class="digit">
-                  3
+                <div class="aspect-ratio">
+                  <div class="digit">
+                    3
+                  </div>
                 </div>
               </div>
+
               <div class="td">
-                <div class="digit">
-                  4
+                <div class="aspect-ratio">
+                  <div class="digit">
+                    4
+                  </div>
                 </div>
               </div>
+
             </div>
           </div>
         </div>
+
       </div>
     </div>
   </body>
