--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,8 +54,10 @@
             </div>
           </div>
         </div>
-
       </div>
     </div>
+    <script>
+//      window.fitText($(".digit"));
+    </script>
   </body>
 </html>
