--- a/_sass/counters.sass
+++ b/_sass/counters.sass
@@ -5,6 +5,7 @@
   text-align: center
 
   .table
+    width: 350px
     display: table
     border: 1px solid
 
@@ -18,13 +19,8 @@
           border-right: 0
 
         .aspect-ratio
-          // position: relative
           font-size: 600%
           border-right: 1px solid black
 
           .digit
             padding: 0 15px
-          //position: absolute
-          //background: yellow
-          //left: 50%
-          //transform: translate(-50%,0)
