wip: adding style

--- a/_sass/counters.sass
+++ b/_sass/counters.sass
@@ -1,3 +1,14 @@
+h1
+  background: rgba(0,0,0,0.2)
+  text-align: center
+  color: #fff
+  font: 95px/1 "Impact"
+  text-transform: uppercase
+  display: inline-block
+  width: 100%
+  margin: 5% auto 5%
+
+
 #basic
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif
   display: inline-block
@@ -19,8 +30,8 @@
           border-right: 0
 
         .aspect-ratio
-          font-size: 600%
           border-right: 1px solid black
 
           .digit
+            font-size: 600%
             padding: 0 15px
