--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,10 @@
       <div class="wrapper">
         {{ content }}
 
+        <!--<header>-->
+          <!--<h1 id="fittext">Squeeze with FitText</h1>-->
+        <!--</header>-->
+
         <div id="basic">
           <div class="table">
             <div class="tr">
@@ -58,6 +62,10 @@
     </div>
     <script>
 //      window.fitText($(".digit"));
+//fitText(document.getElementById('fittext'), 1.2);
+
     </script>
+
+
   </body>
 </html>
