--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,65 +7,9 @@
       <div class="wrapper">
         {{ content }}
 
-        <!--<header>-->
-          <!--<h1 id="fittext">Squeeze with FitText</h1>-->
-        <!--</header>-->
+        {% include counters/basic.html %}
 
-        <div id="basic">
-          <div class="table">
-            <div class="tr">
-
-              <div class="td">
-                <div class="aspect-ratio">
-                  <div class="digit">
-                    0
-                  </div>
-                </div>
-              </div>
-
-              <div class="td">
-                <div class="aspect-ratio">
-                  <div class="digit">
-                    1
-                  </div>
-                </div>
-              </div>
-
-              <div class="td">
-                <div class="aspect-ratio">
-                  <div class="digit">
-                    2
-                  </div>
-                </div>
-              </div>
-
-              <div class="td">
-                <div class="aspect-ratio">
-                  <div class="digit">
-                    3
-                  </div>
-                </div>
-              </div>
-
-              <div class="td">
-                <div class="aspect-ratio">
-                  <div class="digit">
-                    4
-                  </div>
-                </div>
-              </div>
-
-            </div>
-          </div>
-        </div>
       </div>
     </div>
-    <script>
-//      window.fitText($(".digit"));
-//fitText(document.getElementById('fittext'), 1.2);
-
-    </script>
-
-
   </body>
 </html>
