adding odemeter effect

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,9 @@
 
         {% include counters/basic.html %}
 
+
+        {% include counters/odometer.html %}
+
       </div>
     </div>
   </body>
