--- a/_includes/counters/odometer.html
+++ b/_includes/counters/odometer.html
@@ -1,4 +1,4 @@
-<div class="odometer"><div class="digit">
+<div class="odometer" id="odometer-counter"><div class="digit">
   <div class="digit-container digit-hundred">0 9 8 7 6 5 4 3 2 1 0</div>
 </div><div class="digit">
   <div class="digit-container digit-ten">0 9 8 7 6 5 4 3 2 1 0</div>
