--- a/css/main.scss
+++ b/css/main.scss
@@ -50,5 +50,6 @@ $on-laptop:        800px;
         "base",
         "layout",
         "syntax-highlighting",
-        "counters"
+        "basic-counter",
+        "odometer"
 ;
