--- a/_includes/counters/odometer.html
+++ b/_includes/counters/odometer.html
@@ -1,7 +1,1 @@
-<div class="odometer" id="odometer-counter"><div class="digit">
-  <div class="digit-container digit-hundred">0 9 8 7 6 5 4 3 2 1 0</div>
-</div><div class="digit">
-  <div class="digit-container digit-ten">0 9 8 7 6 5 4 3 2 1 0</div>
-</div><div class="digit">
-  <div class="digit-container digit-one">0 9 8 7 6 5 4 3 2 1 0</div>
-</div></div>
+<div id="odometer" class="odometer-custom">0000</div>
