--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,11 @@
   <link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
-  <!-- Js scripts-->
+  <!-- Js scripts -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+
+  <!-- Js odometer -->
+  <link rel="stylesheet" href="http://github.hubspot.com/odometer/themes/odometer-theme-default.css" />
+  <script src="http://github.hubspot.com/odometer/odometer.js"></script>
+
 </head>
