--- a/_includes/counters/basic.html
+++ b/_includes/counters/basic.html
@@ -1,47 +1,47 @@
-<!--<div id="basic">-->
-  <!--<div class="table">-->
-    <!--<div class="tr">-->
+<div id="basic">
+  <div class="table">
+    <div class="tr">
 
-      <!--<div class="td">-->
-        <!--<div class="aspect-ratio">-->
-          <!--<div class="digit">-->
-            <!--0-->
-          <!--</div>-->
-        <!--</div>-->
-      <!--</div>-->
+      <div class="td">
+        <div class="aspect-ratio">
+          <div class="digit">
+            0
+          </div>
+        </div>
+      </div>
 
-      <!--<div class="td">-->
-        <!--<div class="aspect-ratio">-->
-          <!--<div class="digit">-->
-            <!--1-->
-          <!--</div>-->
-        <!--</div>-->
-      <!--</div>-->
+      <div class="td">
+        <div class="aspect-ratio">
+          <div class="digit">
+            1
+          </div>
+        </div>
+      </div>
 
-      <!--<div class="td">-->
-        <!--<div class="aspect-ratio">-->
-          <!--<div class="digit">-->
-            <!--2-->
-          <!--</div>-->
-        <!--</div>-->
-      <!--</div>-->
+      <div class="td">
+        <div class="aspect-ratio">
+          <div class="digit">
+            2
+          </div>
+        </div>
+      </div>
 
-      <!--<div class="td">-->
-        <!--<div class="aspect-ratio">-->
-          <!--<div class="digit">-->
-            <!--3-->
-          <!--</div>-->
-        <!--</div>-->
-      <!--</div>-->
+      <div class="td">
+        <div class="aspect-ratio">
+          <div class="digit">
+            3
+          </div>
+        </div>
+      </div>
 
-      <!--<div class="td">-->
-        <!--<div class="aspect-ratio">-->
-          <!--<div class="digit">-->
-            <!--4-->
-          <!--</div>-->
-        <!--</div>-->
-      <!--</div>-->
+      <div class="td">
+        <div class="aspect-ratio">
+          <div class="digit">
+            4
+          </div>
+        </div>
+      </div>
 
-    <!--</div>-->
-  <!--</div>-->
-<!--</div>-->
+    </div>
+  </div>
+</div>
