--- a/_sass/basic-counter.scss
+++ b/_sass/basic-counter.scss
@@ -24,7 +24,7 @@
           border-right: 1px solid black;
 
           .digit {
-            font-size: 600%;
+            font-size: 20vw;
             padding: 0 15px;
           }
         }
